--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@ function updateTotal() {
         };
         
         // Admin functionality
-        const ADMIN_PASSWORD = 'admin123'; // This should be changed to a secure password
+        const ADMIN_PASSWORD = 'promo2025!'; // This should be changed to a secure password
         let currentEditingId = null;
 
         function toggleAdminLogin() {
@@ -1249,7 +1249,7 @@ function updateTotal() {
         };
 
         // GD Report functionality
-        const GD_PASSWORD = 'admin123';
+        const GD_PASSWORD = 'gdpromo2025!';
 
         function toggleGDLogin() {
             const loginForm = document.getElementById('gdLoginForm');
